# schoolmarm

./: .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO.md  README.md  ROADMAP.md  SECURITY.md  SPONSORS.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/: error.rs  lib.rs  parse.rs  state.rs  types.rs
tests/: integration.rs
tests/fixtures/: json.gbnf
