[package]
name = "schoolmarm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Michael-A-Kuykendall/schoolmarm"
homepage = "https://github.com/Michael-A-Kuykendall/schoolmarm"
description = "GBNF grammar-constrained decoding for LLM inference, ported from llama.cpp"
keywords = ["llm", "grammar", "gbnf", "inference", "sampling"]
categories = ["text-processing", "parsing"]

[dependencies]
# Zero dependencies. This is a leaf crate.

[workspace]
